con console veo carrito, total unid, precio)

--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -98,51 +98,10 @@
 
             <div id="MTB" class="space-intercat"></div>
 
-            <div  class="titulo-cat-container">
+            <div class="titulo-cat-container">
                 <h2 class="titulo-cat">MOUNTAIN-BIKE</h2>
             </div>
-
-
-            <section class="productos-container">
-
-                <div data-aos="fade-right" id="MTB" class="item-prod item-MTB-prod1">
-                    <div class="item-img-container">
-                        <a class="btn-prod" href="/secciones/productos.html">VER PRODUCTO</a>
-                    </div>
-                    <div class="item-desc-container">
-                        <h4>MTB Cube Attention 29"</h4>
-                        <h5>Shimano Deore XT 30 3x9</h5>
-                        <h6>$550.000 ARS</h6>
-                        <a href="" class="btn-prod2">+ Agregar al carrito</a>
-                    </div>
-                </div>
-
-                <div data-aos="fade-right" class="item-prod item-MTB-prod2">
-                    <div class="item-img-container">
-                        <a class="btn-prod" href="/secciones/productos.html">VER PRODUCTO</a>
-                    </div>
-                    <div class="item-desc-container">
-                        <h4>MTB Cube Ghost 29"</h4>
-                        <h5>Shimano Deore 2x12</h5>
-                        <h6>$450.000 ARS</h6>
-                        <a href="" class="btn-prod2">+ Agregar al carrito</a>
-                    </div>
-                </div>
-
-                <div data-aos="fade-right" class="item-prod item-MTB-prod3">
-                    <div class="item-img-container">
-                        <a class="btn-prod" href="/secciones/productos.html">VER PRODUCTO</a>
-                    </div>
-                    <div class="item-desc-container">
-                        <h4>MTB Cube Ghost 27.5"</h4>
-                        <h5>Shimano Deore XT 3x10</h5>
-                        <h6>$499.000 ARS</h6>
-                        <a href="" class="btn-prod2">+ Agregar al carrito</a>
-                    </div>
-                </div>
-
-                
-
+            <section id="productos-container">           
             </section>
         </main>
 
@@ -185,8 +144,7 @@
 
 
 
-    <script src="../ProductoClass.js"></script>
-    <script src="../ItemClass.js"></script>
+  
     <script src="../App.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
