--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -32,8 +32,6 @@
                 <a href="contacto.html">CONTACTO</a>
                 <a href="galeria.html">GALERÍA</a>
                 <a href="nosotros.html">NOSOTROS</a>
-
-
             </nav>
 
             <div class="mobile-menu">
@@ -94,7 +92,7 @@
 
                     </div>
                     <div class="offcanvasfooter ms-3">
-                        <p>Total $ <span id="preciototal">0</span></p>
+                        <p>Total ARS $ <span id="preciototal">0</span></p>
                     </div>
                 </div>
             </div>
@@ -131,7 +129,7 @@
                 <h2 class="titulo-cat">MOUNTAIN-BIKE</h2>
             </div>
 
-            <section id="productos-container" class="productos-container">
+            <section id="productos-container">
             </section>
         </main>
 
@@ -179,8 +177,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
-
-    <script src="../App.js"></script>
+    <script src="../Products.js"></script>
+    <script src="../CardsApp.js"></script>
+    <script src="../CartApp.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
